Added lots of files needed for pwa and generala structure.

--- a/web/old-browser.html
+++ b/web/old-browser.html
@@ -10,31 +10,28 @@
   <link rel='author' href='humans.txt'>
   <link rel="me" href="https://siteoremail.com" type="text/html">
 
-  <link rel="manifest" type="text/json" href="manifest.json">
   <meta name="theme-color" content="#FFFFFF">
-  <meta name="application-name" content="name">
   <meta name="description" content="description">
-  <meta name="mobile-web-app-capable" content="yes">
 
   <meta name="msapplication-config" content="browserconfig.xml">
 
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="#FAEBD7">
-  <meta name="apple-mobile-web-app-title" content="The Beer O'Clock Clock">
+  <meta name="apple-mobile-web-app-status-bar-style" content="#FFFFFF">
   <link rel="apple-touch-icon" sizes="180x180" href="img/icon/apple-touch-icon.png">
-  <link rel="mask-icon" href="img/icon/safari-pinned-tab.svg" color="#ffffff">
+  <link rel="mask-icon" href="img/icon/safari-pinned-tab.svg" color="#db8b23">
 
-  <link rel="icon" type="image/png" sizes="96x96" href="img/icon/safari-pinned-tab.svg">
+  <link rel="icon" type="image/png" sizes="96x96" href="img/icon/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="64x64" href="img/icon/favicon-64x64.png">
   <link rel="icon" type="image/png" sizes="48x48" href="img/icon/favicon-48x48.png">
   <link rel="icon" type="image/png" sizes="32x32" href="img/icon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="img/icon/favicon-16x16.png">
   <link rel="shortcut icon" href="img/icon/favicon.ico">
 
-  <title>app-title</title>
+  <link rel='stylesheet' type='text/css' href='style/base.css'>
+  <link rel='stylesheet' type='text/css' href='style/old-browser.css'>
+
+  <title>old browser</title>
 </head>
 <body>
-<div id="app"></div>
-<script type="text/javascript" src="js/app.js"></script>
+Old browser...
 </body>
 </html>
